--- a/_includes/header.html
+++ b/_includes/header.html
@@ -47,12 +47,13 @@
 		{% else %}
 		<img
 			alt="{{ page.title }}"
-			src="/assets/images/{{page.id}}/top.jpg" class="img-responsive">
+			src="/assets/images/top.jpg" class="img-responsive"/>
+<!--		<img
+            alt="{{ page.title }}"
+            src="/assets/images/{{page.id}}/top.jpg" class="img-responsive">-->
 		{% endif %}
 
 	<div class="jumbotron  clearfix">
-
 		<h1 class="text-center">{{ page.title }}</h1>
-
 	</div>
 </div>
