--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -37,6 +37,10 @@ h3:before {
 	font-size: 1.3em;
 }
 
+.music-block {
+    margin-bottom: 50px;
+}
+
 .jumbotron {
     padding-top: 0px;
     padding-bottom: 0px;
@@ -46,7 +50,7 @@ h3:before {
 .jumbotron h1 {
 	color: white;
 	letter-spacing: 0.2em;
-	font-size: 3em;
+	font-size: 1.8em;
 	text-align: center;
 	text-transform: uppercase;
 	letter-spacing: 0.2em;
