--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
 	<ul class="footer-links">
-		<li><a href="http://github.com/lunohod-odin"> <i
+		<li><a href="http://github.com/tako-a"> <i
 				class="fa fa-inverse fa-github fa-3x"></i></a></li>
 	</ul>
 </footer>
