--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,7 +24,7 @@
   	<meta property="og:type" content="website" />
 
   	    <script type="application/ld+json">
-{"@context": "http://schema.org",
+{"@context": "https://schema.org",
 "@type": "WebSite",
 "headline": "{{page.title}}",
   {% if page.description %}
